syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.glance.spaces.lsspace.layout.client.v1";

package com.glance.spaces.lsspace.layout.client.v1;

import "com/glance/spaces/common/common_client_params.proto";
import "com/glance/spaces/snp/snp_params.proto";
import "validate/validate.proto";

message ClientLayoutMessage {
  common.CommonClientParams common_params = 1 [(validate.rules).message.required = true];
  snp.SnpParams snp_params = 2;
  repeated ClientLayoutNotification notifications = 3 [(validate.rules).repeated.min_items = 1];
}

message ClientLayoutNotification {
  oneof body {
    GetLayout get_layout = 2;
  }
}

message GetLayout {
}